--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -14,7 +14,11 @@
         android:id="@+id/searchUserFragment"
         android:name="com.monke.machnomusic3.ui.userFeature.search.SearchUserFragment"
         android:label="fragment_search_user"
-        tools:layout="@layout/fragment_search_user" />
+        tools:layout="@layout/fragment_search_user" >
+        <action
+            android:id="@+id/action_searchUserFragment_to_userFragment"
+            app:destination="@id/userFragment" />
+    </fragment>
     <fragment
         android:id="@+id/myMusicFragment"
         android:name="com.monke.machnomusic3.ui.musicFeature.music.myMusic.MyMusicFragment"
@@ -60,4 +64,9 @@
         android:name="com.monke.machnomusic3.ui.musicFeature.track.SelectTracksFragment"
         android:label="fragment_select_tracks"
         tools:layout="@layout/fragment_select_tracks" />
+    <fragment
+        android:id="@+id/userFragment"
+        android:name="com.monke.machnomusic3.ui.userFeature.user.UserFragment"
+        android:label="fragment_user"
+        tools:layout="@layout/fragment_user" />
 </navigation>
